
idf_component_register(
  SRCS
    src/Carousel.cpp
    src/DisplayDriver.cpp
    src/EPaperPervasive.cpp
    src/EPD_WaveShare.cpp
    src/EPD_WaveShare_154.cpp
    src/EPD_WaveShare_154D67.cpp
    src/EPD_WaveShare_29.cpp
    src/EPD_WaveShare_29T5.cpp
    src/EPD_WaveShare_42.cpp
    src/EPD_WaveShare_43.cpp
    src/EPD_WaveShare_75.cpp
    src/ILI9341_SPI.cpp
    src/MiniGrafx.cpp
    src/SSD1331_SPI.cpp
  INCLUDE_DIRS "src"
  REQUIRES arduino
  )
